# Ray_Tracer_Basic

./: README.md
olio/data/scenes/: jug_triangle_soup.scn  streetlamp_scene.scn
olio/src/: CMakeLists.txt
olio/src/core/: CMakeLists.txt  aabb.cc  aabb.h  face_geouv.cc  face_geouv.h  ray.h  types.h
olio/src/core/camera/: camera.cc
olio/src/core/geometry/: bvh_node.cc  bvh_node.h  sphere.cc  sphere.h  surface.cc  surface.h  surface_list.cc  surface_list.h  triangle.cc  triangle.h  trimesh.cc  trimesh.h
olio/src/core/light/: light.cc  light.h
olio/src/core/material/: material.h  phong_dielectric.cc  phong_dielectric.h  phong_material.cc  phong_material.h
olio/src/core/parser/: raytra_parser.cc  raytra_parser.h
olio/src/core/renderer/: raytracer.cc  raytracer.h
olio/src/core/texture/: image_texture.cc  image_texture.h  texture.cc  texture.h
olio/src/mesh_gen/: CMakeLists.txt  main.cc
olio/src/rtbasic/: main.cc
olio/src/tests/: main.cc
solution_executables/: olio_mesh_gen  olio_rtbasic
